--- a/resources/language/French/strings.po
+++ b/resources/language/French/strings.po
@@ -369,3 +369,23 @@ msgstr "Convertir en mp4"
 msgctxt "#30091"
 msgid "All Channels"
 msgstr "Toutes les chaînes"
+
+msgctxt "#30092"
+msgid "Start Time"
+msgstr "Heure de début"
+
+msgctxt "#30093"
+msgid "Number of hours to record"
+msgstr "Nombre d'heures à enregistrer"
+
+msgctxt "#30094"
+msgid "Rule Name"
+msgstr "Nom de la règle"
+
+msgctxt "#30095"
+msgid "Start Date"
+msgstr "Date de début"
+
+msgctxt "#30096"
+msgid "Stop Time"
+msgstr "Date de fin"
