--- a/resources/language/German/strings.po
+++ b/resources/language/German/strings.po
@@ -369,3 +369,23 @@ msgstr "Convert to mp4"
 msgctxt "#30091"
 msgid "All Channels"
 msgstr "All Channels"
+
+msgctxt "#30092"
+msgid "Start Time"
+msgstr "Start Time"
+
+msgctxt "#30093"
+msgid "Number of hours to record"
+msgstr "Number of hours to record"
+
+msgctxt "#30094"
+msgid "Rule Name"
+msgstr "Rule Name"
+
+msgctxt "#30095"
+msgid "Start Date"
+msgstr "Start Date"
+
+msgctxt "#30096"
+msgid "Stop Time"
+msgstr "Stop Time"
