--- a/resources/language/German/strings.po
+++ b/resources/language/German/strings.po
@@ -389,3 +389,7 @@ msgstr "Start Date"
 msgctxt "#30096"
 msgid "Stop Time"
 msgstr "Stop Time"
+
+msgctxt "#30097"
+msgid "Updating database"
+msgstr "Updating database"
