--- a/resources/language/German/strings.po
+++ b/resources/language/German/strings.po
@@ -393,3 +393,7 @@ msgstr "Stop Time"
 msgctxt "#30097"
 msgid "Updating database"
 msgstr "Updating database"
+
+msgctxt "#30098"
+msgid "Database not found"
+msgstr "Database not found, please retry after few seconds ..."
