--- a/resources/language/English/strings.po
+++ b/resources/language/English/strings.po
@@ -393,3 +393,7 @@ msgstr ""
 msgctxt "#30097"
 msgid "Updating database"
 msgstr ""
+
+msgctxt "#30098"
+msgid "Database not found"
+msgstr "Database not found, please retry after few seconds ..."
